Use Java 21 features