@@ -244,7 +244,7 @@ public class MCreatorTabs {
 
 			if (tab.equals(this.current))
 				if (!showTab(this.previous)) {
-					showTab(tabs.get(0));
+					showTab(tabs.getFirst());
 				}
 
 			if (tab.tabClosedListener != null)
